--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@imtbl/imx-sdk": "^1.3.26",
     "@newhighsco/next-plugin-svgr": "^3.0.38",
+    "axios": "^0.25.0",
     "ethers": "^5.5.3",
     "next": "^12.0.7",
     "react": "17.0.2",
