--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^0.25.0",
     "ethers": "^5.5.3",
     "next": "^12.0.7",
+    "next-intercept-stdout": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7"
   },
@@ -24,6 +26,7 @@
     "@types/node": "^17.0.2",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.18",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.5.0",
