--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ethers": "^5.5.3",
     "next": "^12.0.7",
     "next-intercept-stdout": "^1.0.0",
+    "nextjs-progressbar": "^0.0.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
