--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@newhighsco/next-plugin-svgr": "^3.0.38",
     "axios": "^0.25.0",
     "ethers": "^5.5.3",
+    "framer-motion": "^6.2.3",
     "next": "^12.0.7",
     "next-intercept-stdout": "^1.0.0",
     "nextjs-progressbar": "^0.0.13",
