--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.25.0",
     "ethers": "^5.5.3",
     "framer-motion": "^6.2.3",
+    "lodash": "^4.17.21",
     "next": "^12.0.7",
     "next-intercept-stdout": "^1.0.0",
     "nextjs-progressbar": "^0.0.13",
@@ -25,6 +26,7 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.2",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
