Replace `styled-components` with `emotion`

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,3 @@
 {
-  "recommendations": [
-    "esbenp.prettier-vscode",
-    "mike-co.import-sorter",
-    "styled-components.vscode-styled-components"
-  ]
+  "recommendations": ["esbenp.prettier-vscode", "mike-co.import-sorter"]
 }
