--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@imtbl/imx-sdk": "^1.3.39",
     "@newhighsco/next-plugin-svgr": "^3.0.38",
     "axios": "^0.25.0",
+    "emotion-normalize": "^11.0.1",
     "ethers": "^5.5.3",
     "framer-motion": "^6.2.3",
     "lodash": "^4.17.21",
@@ -21,9 +24,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
-    "recoil": "^0.5.2",
-    "styled-components": "^5.3.3",
-    "styled-normalize": "^8.0.7"
+    "recoil": "^0.5.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178",
@@ -31,8 +32,6 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/recoil": "^0.0.9",
-    "@types/styled-components": "^5.1.18",
-    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.5.0",
     "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
