--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "recoil": "^0.5.2"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.2",
     "@types/react": "^17.0.37",
@@ -36,7 +37,7 @@
     "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "next-plugin-svgr": "^1.0.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.0",
     "typescript": "^4.5.4"
   }
 }
