--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@imtbl/imx-sdk": "^1.3.39",
+    "@mui/material": "^5.5.2",
     "@newhighsco/next-plugin-svgr": "^3.0.38",
     "axios": "^0.25.0",
     "emotion-normalize": "^11.0.1",
